--- a/app/Template/show.html
+++ b/app/Template/show.html
@@ -36,10 +36,10 @@
 
             <div class="row">
                 <div class="col-lg-8">
-                    <h2>All Products</h2>
+                    <h2>Product's Details</h2>
                 </div>
                 <div class="col-lg-4 pull-right push-right float-right">
-                    <a class="btn btn-success pull-right push-right float-right" href="{{server_root}}/create">Create New Product</a>
+                    <a class="btn btn-success pull-right push-right float-right" href="{{server_root}}/"><i class="fas fa-backspace"></i> Back To Home</a>
                 </div>
             </div>
             <!--
@@ -49,34 +49,44 @@
                 </div>
             @endif
             -->
-            <table class="table table-bordered table-striped table-hover">
-                <thead class="text-white bg-primary">
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Details</th>
-                    <th width="280px">Action</th>
-                </thead>
-                {{products:}}
-                <tr>
-                    <td>{{id}}</td>
-                    <td>{{name}}</td>
-                    <td>$ {{price}}</td>
-                    <td>{{detail}}</td>
-                    <td>
-                        <a class="btn btn-sm btn-info text-white" href="{{server_root}}/{{id}}"><i class="fas fa-eye"></i> Show</a>
 
-                        <a class="btn btn-sm btn-primary text-white" href="{{server_root}}/{{id}}/edit"><i class="fas fa-edit"></i> Edit</a>
+            <div class="card border-primary">
+                <div class="card-body">
+                    {{products:}}
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <strong>ID:</strong>
+                            {{id}}
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <strong>Name:</strong>
+                            {{name}}
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <strong>Price:</strong>
+                            $ {{price}}
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <strong>Details:</strong>
+                            {{detail}}
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <a class="btn btn-sm btn-primary text-white" href="{{server_root}}/{{id}}/edit"><i class="fas fa-edit"></i> Edit</a>
 
-                        <a class="btn btn-sm btn-danger text-white" href="{{server_root}}/{{id}}/delete"><i class="fas fa-trash"></i> Delete</a>
-                    </td>
-                </tr>
-                {{:products}}
-            </table>
-
-            <nav aria-label="Product Page Navigation">
-                {{pagination}}
-            </nav>
+                            <a class="btn btn-sm btn-danger text-white" href="{{server_root}}/{{id}}/delete"><i class="fas fa-trash"></i> Delete</a>
+                        </div>
+                    </div>
+                    {{:products}}
+                </div>
+            </div>
 
         </section>
     </div>
