--- a/app/Template/show.html
+++ b/app/Template/show.html
@@ -79,9 +79,12 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="form-group">
-                            <a class="btn btn-sm btn-primary text-white" href="{{server_root}}/{{id}}/edit"><i class="fas fa-edit"></i> Edit</a>
+                    	    <form action="{{server_root}}/{{id}}" method="POST">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <a class="btn btn-sm btn-primary text-white" href="{{server_root}}/{{id}}/edit"><i class="fas fa-edit"></i> Edit</a>
 
-                            <a class="btn btn-sm btn-danger text-white" href="{{server_root}}/{{id}}/delete"><i class="fas fa-trash"></i> Delete</a>
+                                <button class="btn btn-sm btn-danger text-white"><i class="fas fa-trash"></i> Delete</button>
+                            </form>
                         </div>
                     </div>
                     {{:products}}
