--- a/app/Template/create.html
+++ b/app/Template/create.html
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                              <button type="submit" class="btn btn-primary">Update Product</button>
+                              <button type="submit" class="btn btn-primary">Add Product</button>
                             </div>
                         </div>
 
