--- a/app/Template/create.html
+++ b/app/Template/create.html
@@ -52,7 +52,7 @@
             <div class="card border-primary">
                 <div class="card-body">
                     <form action="{{server_root}}" method="POST">
-                         <input type="hidden" name="_token" value="{{_token}}">
+                         <input type="" name="_token" value="{{_token}}" class="form-control">
                          <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <div class="form-group">
