--- a/app/Template/create.html
+++ b/app/Template/create.html
@@ -42,11 +42,11 @@
                 </div>
             </div>
             <!--
-            @if ($message = Session::get('success'))
+            if ($message = Session::get('success'))
                 <div class="alert alert-success">
-                    <p>{{ $message }}</p>
+                    <p> $message </p>
                 </div>
-            @endif
+            endif
             -->
 
             <div class="card border-primary">
